fixing css overlapping GRRR

--- a/frontend/src/Employee/components/Ordering/CustOrdering.css
+++ b/frontend/src/Employee/components/Ordering/CustOrdering.css
@@ -1,65 +1,7 @@
 /* Ordering.css */
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
 
-
-/*
-table {
-    border-collapse: collapse;
-    width: 100%; 
-}
-
-td {
-    border: 1px solid transparent; 
-    padding: 18px;
-    text-align: left; 
-    font-weight: 600;
-}
-
-th {
-    border: 1px solid transparent; 
-    background-color: #f2f2f2;
-}
-
-
-.quantity {
-    text-align: center;
-}
-
-.adjust {
-    text-align: center;
-}
-
-.minus {
-    margin: 5px;
-    width: 40%;
-}
-
-.plus {
-    margin: 5px;
-    width: 40%;
-}
-
-.delete {
-    margin: 5px;
-}
-
-.tfoot .td{
-    font-weight: 1000 !important;
-} */
-
-@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
-
-*,
-*:after,
-*:before {
-	box-sizing: border-box;
-}
-
-.large-text * {
-    font-size: 40px;
-}
-
-body {
+.Ordering body {
     font-family: "Chakra Petch", sans-serif;
     font-size: 1rem;
 }
@@ -115,7 +57,7 @@ body {
     z-index: 10;
 }
 
-.employee-bottom-nav {
+.customer-bottom-nav {
     font-family: "Chakra Petch", sans-serif;
     display: flex;
     justify-content: space-around;
@@ -129,7 +71,7 @@ body {
     z-index: 999;
 }
 
-.employee-category-button {
+.customer-category-button {
     font-family: "Chakra Petch", sans-serif;
     background-color: white;
     border: none;
@@ -141,12 +83,12 @@ body {
     transition: color 0.3s ease;
 }
 
-.special {
+.CustOrderingSpecial {
     background-color: #9d3e3e !important;
     color: gold;
 }
 
-img {
+.employee-item-button img {
     width: 10em;
     border-radius: 15px;
 }
